# soundevents

./: .codecov.yml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  cobertura.xml
.github/workflows/: ci.yml  loc.yml
scripts/: download_models.sh
soundevents/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  THIRD_PARTY_NOTICES.md
soundevents-dataset/: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  build.rs
soundevents-dataset/src/: generated.rs  lib.rs
soundevents-dataset/src/ontology/: generated.rs  mod.rs
soundevents-dataset/src/rated/: generated.rs  mod.rs
soundevents-dataset/tests/: modules.rs  uncased.rs
soundevents/configs/: base.json  small.json
soundevents/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
