[workspace]
members = [
  "soundevents",
  "soundevents-dataset",
  "xtask",
]
default-members = [
  "soundevents",
  "soundevents-dataset",
]
resolver = "3"

[workspace.dependencies]
thiserror = { version = "2", default-features = false }
serde = "1"

soundevents-dataset = { version = "0.2", path = "soundevents-dataset", default-features = false }

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/findit-ai/soundevents"
homepage = "https://github.com/findit-ai/soundevents"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false
