[package]
name = "soundevents-dataset"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/findit-ai/soundevents"
homepage = "https://github.com/findit-ai/soundevents"
documentation = "https://docs.rs/soundevents"
description = "Audio Set Ontology aims to provide a comprehensive set of categories to describe sound events."
license = "MIT OR Apache-2.0"
rust-version = "1.56"

[features]
default = ["std"]
alloc = []
std = ["thiserror/default"]

[dependencies]
phf = { version = "0.13", features = ["macros"] }
thiserror = { version = "2", default-features = false }

[dev-dependencies]
criterion = "0.8"
tempfile = "3"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = "2"
prettyplease = "0.2"
quote = "1"
syn = "2"
heck = "0.5"
siphasher = "1"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
] }
