[package]
name = "soundevents"
version = "0.3.0"
edition = "2024"
description = "Production-oriented Rust inference wrapper for CED AudioSet classifiers."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/soundevents"
readme = "README.md"
keywords = ["audioset", "audio-classification", "ced", "sound-events", "onnx"]
categories = ["multimedia::audio", "science"]
rust-version = "1.85"
include = [
  "Cargo.toml",
  "README.md",
  "THIRD_PARTY_NOTICES.md",
  "build.rs",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "models/tiny.onnx",
  "src/**",
]

[features]
# Tiny CED is ~6.4 MB, so bundling stays opt-in instead of inflating every
# binary by default.
default = []
bundled-tiny = []

serde = ["dep:serde"]

[dependencies]
ort = "2.0.0-rc.12"
smol_str = "0.3"
thiserror = { workspace = true, features = ["default"] }

soundevents-dataset = { workspace = true, features = ["rated"] }

serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
